docs/api/qiskit/0.33/qiskit.pulse.library.Waveform.mdx
---
title: Waveform (v0.33)
description: API reference for qiskit.pulse.library.Waveform in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.library.Waveform
---

# Waveform

<Class id="qiskit.pulse.library.Waveform" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/pulse/library/waveform.py" signature="Waveform(samples, name=None, epsilon=1e-07, limit_amplitude=None)" modifiers="class">
  Bases: `qiskit.pulse.library.pulse.Pulse`

  A pulse specified completely by complex-valued samples; each sample is played for the duration of the backend cycle-time, dt.

  Create new sample pulse command.

  **Parameters**

  *   **samples** (`Union`\[`ndarray`, `List`\[`complex`]]) – Complex array of the samples in the pulse envelope.
  *   **name** (`Optional`\[`str`]) – Unique name to identify the pulse.
  *   **epsilon** (`float`) – Pulse sample norm tolerance for clipping. If any sample’s norm exceeds unity by less than or equal to epsilon it will be clipped to unit norm. If the sample norm is greater than 1+epsilon an error will be raised.
  *   **limit\_amplitude** (`Optional`\[`bool`]) – Passed to parent Pulse

  ## Methods

  <span id="qiskit-pulse-library-waveform-draw" />

  ### draw

  <Function id="qiskit.pulse.library.Waveform.draw" signature="Waveform.draw(style=None, backend=None, time_range=None, time_unit='dt', show_waveform_info=True, plotter='mpl2d', axis=None)">
    Plot the interpolated envelope of pulse.

    **Parameters**

    *   **style** (`Optional`\[`Dict`\[`str`, `Any`]]) – Stylesheet options. This can be dictionary or preset stylesheet classes. See `IQXStandard`, `IQXSimple`, and `IQXDebugging` for details of preset stylesheets.

    *   **backend** (*Optional\[*[*BaseBackend*](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")*]*) – Backend object to play the input pulse program. If provided, the plotter may use to make the visualization hardware aware.

    *   **time\_range** (`Optional`\[`Tuple`\[`int`, `int`]]) – Set horizontal axis limit. Tuple `(tmin, tmax)`.

    *   **time\_unit** (`str`) – The unit of specified time range either `dt` or `ns`. The unit of `ns` is available only when `backend` object is provided.

    *   **show\_waveform\_info** (`bool`) – Show waveform annotations, i.e. name, of waveforms. Set `True` to show additional information about waveforms.

    *   **plotter** (`str`) –

        Name of plotter API to generate an output image. One of following APIs should be specified:

        ```python
        mpl2d: Matplotlib API for 2D image generation.
            Matplotlib API to generate 2D image. Charts are placed along y axis with
            vertical offset. This API takes matplotlib.axes.Axes as `axis` input.
        ```

        axis and style kwargs may depend on the plotter.

    *   **axis** (`Optional`\[`Any`]) – Arbitrary object passed to the plotter. If this object is provided, the plotters use a given `axis` instead of internally initializing a figure object. This object format depends on the plotter. See plotter argument for details.

    **Returns**

    Visualization output data. The returned data type depends on the `plotter`. If matplotlib family is specified, this will be a `matplotlib.pyplot.Figure` data.
  </Function>

  <span id="qiskit-pulse-library-waveform-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.pulse.library.Waveform.is_parameterized" signature="Waveform.is_parameterized()">
    Return True iff the instruction is parameterized.

    **Return type**

    `bool`
  </Function>

  ## Attributes

  ### id

  <Attribute id="qiskit.pulse.library.Waveform.id">
    Unique identifier for this pulse.

    **Return type**

    `int`
  </Attribute>

  ### limit\_amplitude

  <Attribute id="qiskit.pulse.library.Waveform.limit_amplitude" attributeValue="True" />

  ### parameters

  <Attribute id="qiskit.pulse.library.Waveform.parameters">
    Return a dictionary containing the pulse’s parameters.

    **Return type**

    `Dict`\[`str`, `Any`]
  </Attribute>

  ### samples

  <Attribute id="qiskit.pulse.library.Waveform.samples">
    Return sample values.

    **Return type**

    `ndarray`
  </Attribute>
</Class>

